--- a/install.org
+++ b/install.org
@@ -1,7 +1,7 @@
 #https://github.com/sindresorhus/quick-look-plugins
 brew cask install qlcolorcode qlstephen qlmarkdown quicklook-json qlimagesize suspicious-package quicklookase qlvideo
 brew cask install provisionql glance qlplayground
-# 需求：查看shell ,python oc ,swift,png,finder
+# 需求：查看 shell ,python oc ,swift,png,finder
 #
 #se
 defaults write io.github.norio-nomura.qlplayground HighlightStyle dark
@@ -20,3 +20,8 @@ https://zhuanlan.zhihu.com/p/137655848
 ibrew cask install qlcolorcode
 ibrew install lua luarocks highlight
 ibrew info qlcolorcode
+
+# 配置
+查看配置
+defaults read org.n8gray.QLColorCode
+重置配置
